# clipnotch

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-19-audioshit-mvp.md
docs/superpowers/specs/: 2026-07-19-audioshit-design.md
src/audioshit/: __init__.py  download_worker.py  export.py  interval_table.py  main.py  main_window.py  marker_model.py  player.py  waveform_view.py
src/clipnotch/: download_worker.py  export.py  ffmpeg_ops.py  interval_table.py  main.py  main_window.py  marker_model.py  player.py  waveform.py  waveform_view.py  ytdlp_ops.py
tests/: conftest.py  test_download_worker.py  test_export.py  test_ffmpeg_ops.py  test_interval_table.py  test_main_window.py  test_marker_model.py  test_player.py  test_smoke.py  test_waveform.py  test_waveform_view.py  test_ytdlp_ops.py
