[project]
name = "audioshit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mark", email = "markharnyk@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
    "pyside6>=6.11.1",
    "yt-dlp>=2026.7.4",
]

[project.scripts]
audioshit = "audioshit.main:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-qt>=4.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
